# SimplyCpp

./: .gitattributes  .gitignore  AboutForm.Designer.cs  AboutForm.resx  CMakeLists.txt  MainForm.Designer.cs  README-gcc-tdm.txt  README.MD  SimplyCpp.sln
SimplyCpp/: AboutForm.cs  AboutForm.resx  Application.cpp  Application.h  CppHighlighter.cs  EditorWidget.cpp  EditorWidget.h  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MainFrame.cpp  MainFrame.h  Program.cs  SimplyCpp.csproj  SimplyCpp.rc  SimplyCpp.sln  SimplyCpp.vcxproj  SimplyCpp.vcxproj.filters  SyntaxColors.xml  TerminalWidget.cpp  TerminalWidget.h  compile.cmd  packages.config  run.cmd  stdafx.h
SimplyCpp/Core/: Config.cpp  Config.h  Project.h  SourceFile.cpp  SourceFile.h
SimplyCpp/Properties/: AssemblyInfo.cs
SimplyCpp/UI/: Application.cpp  Application.h  EditorWidget.cpp  EditorWidget.h  ErrorList.cpp  ErrorList.h  MainFrame.cpp  MainFrame.h  ProjectExplorer.cpp  ProjectExplorer.h  TerminalWidget.cpp  TerminalWidget.h
TDM-GCC-32/: README-gcc-tdm.txt  README-gdb32-tdm.txt
TDM-GCC-32/include/: pthread.h  stdio.h
src/: stdafx.h
src/Core/: Config.cpp  Config.h  Project.cpp  SourceFile.cpp  SourceFile.h
src/UI/: Application.cpp  Application.h  EditorWidget.cpp  EditorWidget.h  ErrorList.cpp  ErrorList.h  MainFrame.cpp  MainFrame.h  ProjectExplorer.cpp  TerminalWidget.cpp  Utils.h  (+1 more)
wxSimplyCpp/: Application.cpp  Application.h  EditorWidget.cpp  EditorWidget.h  MainFrame.cpp  MainFrame.h  RCa09992  TerminalWidget.cpp  TerminalWidget.h  stdafx.h  wxSimplyCpp.vcxproj  wxSimplyCpp.vcxproj.filters
(+21 files in other folders)
